--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     <header>
         <h2 class="logo"><span>ree</span>han</h2>
         <nav class="navigation">
-            <a href="#">Home</a>
-            <a href="#">About</a>
+            <a href="https://eangg1.github.io/error/">Home</a>
+            <a href="https://eangg1.github.io/error/">About</a>
             <a href="https://rhanzaj.blogspot.com/">Blog</a>
-            <a href="#">Contact</a>
+            <a href="https://eangg1.github.io/error/">Contact</a>
         </nav>
         <a href="https://drive.google.com/file/d/1ByXCbURhXIIyDuJm0Y-ZRZrFw04bWxwP/view?usp=sharing" class="tombol-download">Download CV</a>
     </header>
@@ -30,7 +30,7 @@
             Saya sangat tertarik untuk mengeksplorasi berbagai kesempatan karir di bidang bisnis, seperti manajemen, pemasaran, keuangan, atau administrasi. Saya percaya bahwa dedikasi, kerja keras, dan kemampuan untuk belajar secara kontinu akan membantu saya mencapai tujuan karir saya.</p>
             
             <div class="grup-tombol">
-                <a href="#">Hire Me</a>
+                <a href="https://eangg1.github.io/error/">Hire Me</a>
             </div>
 
             <div class="sosmed">
