--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
         <h2 class="logo"><span>ree</span>han</h2>
         <nav class="navigation">
-            <a href="https://eangg1.github.io/error/">Home</a>
+            <a href="https://eangg1.github.io/personal-website/">Home</a>
             <a href="https://eangg1.github.io/error/">About</a>
             <a href="https://rhanzaj.blogspot.com/">Blog</a>
             <a href="https://eangg1.github.io/error/">Contact</a>
