--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <a href="https://eangg1.github.io/personal-website/">Home</a>
             <a href="https://eangg1.github.io/about-me/">About</a>
             <a href="https://rhanzaj.blogspot.com/">Blog</a>
+            <a href="https://eangg1.github.io/error/">Project</a>
             <a href="https://eangg1.github.io/error/">Contact</a>
         </nav>
         <a href="https://drive.google.com/file/d/1ByXCbURhXIIyDuJm0Y-ZRZrFw04bWxwP/view?usp=sharing" class="tombol-download">Download CV</a>
