--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <a href="https://eangg1.github.io/personal-website/">Home</a>
             <a href="https://eangg1.github.io/about-me/">About</a>
             <a href="https://rhanzaj.blogspot.com/">Blog</a>
-            <a href="https://eangg1.github.io/error/">Project</a>
+            <a href="https://eangg1.github.io/project/">Project</a>
         </nav>
         <a href="https://drive.google.com/file/d/1U_4D8vgt2fxYAMtQ6J6i3NEgCicTJy7c/view?usp=sharing" class="tombol-download">Download CV</a>
     </header>
